--- a/app/src/main/res/layout/home_image_item.xml
+++ b/app/src/main/res/layout/home_image_item.xml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
     android:layout_marginVertical="5dp"
     android:background="@color/white"
     app:cardCornerRadius="10dp"
-    app:cardElevation="30dp">
+    app:cardElevation="30dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageShow"
+            android:id="@+id/imageHome"
+            android:src="@drawable/frame_98"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:background="@drawable/checkbox_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="@+id/imageShow"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </androidx.cardview.widget.CardView>
